--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Mitr:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="mystyle.css">
 </head>
-
 <body>
   <nav>
     <div class="container">
       <div class="nav-con">
         <div class="logo">
-          <a href="#">GreenTea</a>
+          <a href="index.html">GreenTea</a>
         </div>
         <ul class="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#menu">Menu</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="my1stcategory.html">Drinks</a></li>
+          <li><a href="my2ndcategory.html">Desserts</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -30,12 +29,13 @@
       <div class="welcome-text">
         <h1> Welcome GreenTea Shop 🍵</h1>
         <p>เติมความสดใส ให้ทุกวันมีสุขภาพดี ด้วยชาเขียวหอมกรุ่นและขนมหวานแสนละมุน</p>
-        <a href="#menu" class="welcome-btn">ดูเมนู</a>
+        <a href="my1stcategory.html" class="welcome-btn">ดูเมนูเครื่องดื่ม</a>
+        <a href="my2ndcategory.html" class="welcome-btn">ดูเมนูของหวาน</a>
       </div>
       <div class="welcome-img">
         <figure>
           <img src="resources/greentea-shop.png" alt="บรรยากาศ GreenTea Shop">
-          <figcaption>บรรยากาศร้านชาเขียว</figcaption>
+          <figcaption>GreenTea Shop</figcaption>
         </figure>
       </div>
     </div>
@@ -47,7 +47,6 @@
         <p>
           GreenTea Shop พวกเรามุ่งมั่นนำเสนอเครื่องดื่มชาเขียวคุณภาพพรีเมียม
           และของหวาน เพื่อสุขภาพและความสุขของลูกค้าทุกท่าน
-          ร้านของเรามีมาตรฐานสูงในการเลือกวัตถุดิบ และสร้างประสบการณ์ที่ผ่อนคลายในการดื่มชา
         </p>
       </div>
       <details>
@@ -59,17 +58,14 @@
 
   <section class="hero">
     <video autoplay muted loop class="hero-video">
-      <source src="" type="video/mp4">
+      <source src="resources/bg-video.mp4" type="video/mp4">
       เบราว์เซอร์ของคุณไม่รองรับการเล่นวิดีโอ
     </video>
     <div class="container hero-con">
       <div class="hero-info">
-        <h3>เติมพลังให้กับร่างกายและจิตใจของคุณ 🧘 </h3>
-        <p>
-          ด้วยเครื่องดื่มชาเขียวคุณภาพพรีเมียมและของหวานแสนอร่อย  
-        
-        </p>
-        <a href="#" class="hero-btn">สั่งเลย</a>
+        <h3>เติมพลังให้กับร่างกายและจิตใจของคุณ 🧘</h3>
+        <p>ด้วยเครื่องดื่มชาเขียวคุณภาพพรีเมียมและของหวานแสนอร่อย</p>
+        <a href="my1stcategory.html" class="hero-btn">สั่งเลย</a>
       </div>
       <div class="hero-img">
         <img src="resources/matcha-latte.JPG" alt="มัทฉะลาเต้">
@@ -80,39 +76,9 @@
   <section class="intro-video-section">
     <div class="container">
       <video controls width="100%">
-        <source src="resources/my-intro.mp4" type="video/mp4">
+        <source src="resources/poogun-video.mp4" type="video/mp4">
         เบราว์เซอร์ของคุณไม่รองรับการเล่นวิดีโอ
       </video>
-    </div>
-  </section>
-
-  <section class="menu-section" id="menu">
-    <div class="container">
-      <div class="menu-title">
-        <h3>รายการสินค้าเเนะนำ 🍰</h3>
-      </div>
-      <div class="menu-con">
-        <div class="menu-item">
-          <img src="resources/matcha-latte-glass.JPG" alt="แก้วมัทฉะลาเต้">
-          <h4>Matcha Latte</h4>
-          <p>ชาเขียวมัทฉะพรีเมียมจากญี่ปุ่น ผสมกับนมสด ให้รสชาติกลมกล่อม เหมาะกับคนรักสุขภาพ</p>
-          <a href="#" class="price-btn">65 ฿</a>
-        </div>
-
-        <div class="menu-item">
-          <img src="resources/matcha-cake.jpg" alt="เค้กมัทฉะ">
-          <h4>Matcha Cake</h4>
-          <p>เค้กมัทฉะนุ่มละมุน รสหวานพอดี ทานคู่ชาเขียวหรือกาแฟได้อย่างลงตัว</p>
-          <a href="#" class="price-btn">55 ฿</a>
-        </div>
-
-        <div class="menu-item">
-          <img src="resources/matcha-icecream.jpg" alt="ไอศกรีมมัทฉะ">
-          <h4>Matcha Ice Cream</h4>
-          <p>ไอศกรีมชาเขียวรสเข้มข้น หวานมันพอดี สดชื่นทุกคำ</p>
-          <a href="#" class="price-btn">69 ฿</a>
-        </div>
-      </div>
     </div>
   </section>
 
@@ -123,20 +89,8 @@
         <p>💬 LINE: @GreenTeaShop</p>
         <p>📘 Facebook: <a href="https://www.facebook.com/GreenTeaShop" target="_blank">GreenTeaShop</a></p>
         <p>🕒 เวลาเปิด-ปิด: จันทร์-ศุกร์ 09:00 - 20:00 น.</p>
-        <p> เสาร์-อาทิตย์ 10:00 - 18:00 น.</p>
+        <p>เสาร์-อาทิตย์ 10:00 - 18:00 น.</p>
       </div>
-    </div>
-  </section>
-
-  <section class="reference-section">
-    <div class="container">
-      <h3>📌 อ้างอิงรูปภาพ</h3>
-      <ul class="reference-list">
-        <a href="https://pin.it/2J7rP2YFU" target="_blank">https://pin.it/2J7rP2YFU</a>
-        <a href="https://pin.it/QXqFfooCu" target="_blank">https://pin.it/QXqFfooCu</a>
-        <a href="https://pin.it/7aKfGOwaE" target="_blank">https://pin.it/7aKfGOwaE</a>
-        <a href="https://pin.it/7aKfGOwaE" target="_blank">https://pin.it/7aKfGOwaE</a>
-      </ul>
     </div>
   </section>
 
